2001-04-01  Morten Welinder  <terra@diku.dk>

	* ms-excel-read.c (ms_excel_default_palette): Fix prototype.
	(ms_excel_read_cleanup): New function.

	* ms-excel-util.c (destroy_xl_font_widths): New function.

	* boot.c (plugin_cleanup): New function.

2001-03-31  Zbigniew Chyla  <cyba@gnome.pl>

	* .cvsignore: Added *.lo and *.la.

2001-03-30  Jody Goldberg <jgoldberg@home.com>

	* ms-container.c (ms_container_init) : Take a parent container.
	(ms_container_finalize) : handle NULL blips smoothly.
	(ms_container_get_blip) : check the container if we are empty.

	* ms-escher.c (ms_escher_read_Blip) : always register a blip, even if
	  it is NULL, otherwise the index gets confused.  Move the
	  registration here.
	(ms_escher_blip_new) : from here.
	(ms_escher_read_ClientData) : replace blips we can't understand with
	  rectangles.

	* ms-chart.c (ms_excel_chart) : Pass in the charts container.

	* ms-excel-read.c (ms_excel_workbook_new) : workbook have no parents.
	(ms_excel_sheet_new) : Sheets are contained by workbooks.

2001-03-30  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-read.c (ms_excel_get_style_from_xf) : Only newer versions
	  have indents.

2001-03-30  Morten Welinder  <terra@diku.dk>

	* ms-escher.c (ms_escher_read_container): Plug leak.

2001-03-30  Jody Goldberg <jgoldberg@home.com>

	* boot.c (excel_save) : clarify message.

2001-03-29  Jody Goldberg <jgoldberg@home.com>

	* ms-escher.c (ms_escher_read_Blip) : Fix leak plug.

2001-03-29  Jody Goldberg <jgoldberg@home.com>

	* ms-obj.c (ms_obj_read_biff8_obj) : It seems certain that the MS docs
	  are wrong about list boxes.  I hope they don't do the same thing for
	  other records too.

	* ms-escher.c : s/ms_excel_read_debug/ms_excel_escher_debug/
	(ms_escher_read_OPT) : Add missing OPT records and cleanup docs.
	(ms_escher_read_BSE) : Document the record size and don't attempt to
	  treat this as a container if its content is of size 0.

2001-03-28  Jody Goldberg <jgoldberg@home.com>
